Avance operadores de mutación. Pendiente testeo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,8 @@
         "xmemory": "cpp",
         "xstddef": "cpp",
         "xtr1common": "cpp",
-        "format": "cpp"
+        "format": "cpp",
+        "map": "cpp",
+        "ratio": "cpp"
     }
 }
