Pendiente testeo operador cruzamiento

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,15 @@
         "xtr1common": "cpp",
         "format": "cpp",
         "map": "cpp",
-        "ratio": "cpp"
+        "ratio": "cpp",
+        "charconv": "cpp",
+        "locale": "cpp",
+        "mutex": "cpp",
+        "stop_token": "cpp",
+        "thread": "cpp",
+        "xlocbuf": "cpp",
+        "xlocmes": "cpp",
+        "xlocmon": "cpp",
+        "xloctime": "cpp"
     }
 }
