--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,7 @@
         "xlocmes": "cpp",
         "xlocmon": "cpp",
         "xloctime": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "xhash": "cpp"
     }
 }
